implemented Koala.util.Help for avoiding code redundancy

--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -367,6 +367,7 @@
                 "chartSlctnTimeSeriesBtn": "Time Series",
                 "chartSlctnBarChartBtn": "Bar Chart",
                 "rodosPanelTitle": "RODOS-Filter",
+                "helpTooltip": "Help",
                 "headerTitle": "GEOPORTAL"
             }
         }
