--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -410,9 +410,7 @@
                 "downloadMessage": "Layerdaten herunterladen?",
                 "downloadButtonYes": "Ja",
                 "downloadButtonNo": "Nein",
-                "outputFormatText": "Ausgabeformat",
-                "saveLayerText": "Layer speichern",
-                "wfstsuccess": "Die Änderungen wurden erfolgreich gespeichert.<br>Objekte hinzugefügt: {0}<br>Objekte aktualisiert: {1}<br>Objekte gelöscht: {2}"
+                "outputFormatText": "Ausgabeformat"
             }
         }
     },
@@ -468,6 +466,20 @@
                 "layerNameLabel": "Name des neuen Layers",
                 "okButtonLabel": "Klonen",
                 "cancelButtonLabel": "Abbrechen"
+            }
+        }
+    },
+    "Koala.view.window.FeatureGridWindow": {
+        "config": {
+            "data": {
+                "saveLayerText": "Layer speichern",
+                "wfstSuccess": "Die Änderungen wurden erfolgreich gespeichert.<br>Objekte hinzugefügt: {0}<br>Objekte aktualisiert: {1}<br>Objekte gelöscht: {2}",
+                "wfstFailure": "Die Änderungen konnten nicht gespeichert werden, bitte probieren Sie es später erneut.",
+                "wfstLockFail": "Die WFS-T Lock Anfrage wurde abgelehnt",
+                "wfstLockSuccess": "Die WFS-T Lock Anfrage war erfolgreich. Der Lock läuft in {0} Minute(n) ab",
+                "wfstLockExpired": "Der WFS-T Lock ist abgelaufen",
+                "wfstLockButton": "WFS-T Lock",
+                "layerNotSavedYet": "Der Layer wurde noch nicht gespeichert"
             }
         }
     },
