--- a/src/resources/locale/app-locale-en.json
+++ b/src/resources/locale/app-locale-en.json
@@ -483,6 +483,9 @@
     "Koala.view.window.FeatureGridWindow": {
         "config": {
             "data": {
+                "downloadLayerText": "Download",
+                "geoJsonText": "GeoJSON",
+                "shapefileText": "Shapefile",
                 "saveLayerText": "Save layer",
                 "wfstSuccess": "Changes successfully saved.<br>Objects inserted: {0}<br>Objects updated: {1}<br>Objects deleted: {2}",
                 "wfstFailure": "Changes could not be saved. Please try again later.",
