check tool visibility in appContext for irixPrintBtn

--- a/src/resources/locale/app-locale-de.json
+++ b/src/resources/locale/app-locale-de.json
@@ -464,7 +464,7 @@
                 "uncertaintyCheckboxLabel": "Messungenauigkeit",
                 "exportAsImageBtnText": "Als Bild exportieren",
                 "toggleGroupingButtonText": "Gruppierung wechseln",
-                "printChartButtonText": "IMIS-Druck"
+                "printChartButtonText": "Dokpool"
             }
         }
     },
