--- a/src/resources/locale/app-locale-fr.json
+++ b/src/resources/locale/app-locale-fr.json
@@ -433,7 +433,7 @@
                 "uncertaintyCheckboxLabel": "fr:Messungenauigkeit",
                 "exportAsImageBtnText": "fr:Als Bild exportieren",
                 "toggleGroupingButtonText": "fr:Toggle grouping",
-                "printChartButtonText": "fr:IMIS-Druck"
+                "printChartButtonText": "fr:Dokpool"
             }
         }
     },
